Fix native-access-warning